--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
         </div>
         <div class="img-container7">
             <img src="Images/Rectangle 8 (1).png" alt="">
+            <div class="rotate">
+                <h3 class="save"><span class="travel-txt">Travel.com</span><br> Save up to 70%</h3>
+            </div>
+            
         </div>
     </nav>
 
