--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <button class="btn-7 btn-prime">Subscribe</button>
         </div>
         <div class="img-container7">
-            <img src="Images/Rectangle 8 (1).png" alt="">
+            <img class="lpic" src="Images/Rectangle 8 (1).png" alt="">
             <div class="rotate">
                 <h3 class="save"><span class="travel-txt">Travel.com</span><br> Save up to 70%</h3>
             </div>
